fix(Header): vertically align mobile menu toggle

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -128,7 +128,7 @@
 
   .navbar-toggle {
     margin: 0 0 0 auto;
-    padding: 40px 20px;
+    padding: 38px 20px 42px 20px;
   }
 }
 
